--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,12 +12,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% if page.title %}{% if page.title == "Main" %}Yuntian Deng{% else %}{{ page.title }}{% endif %}{% else %}{{ site.title }}{% endif %}</title>
+  <title>{% if page.title %}{% if page.title == "Main" %}Richa Rastogi{% else %}{{ page.title }}{% endif %}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <meta name="og:image" href="https://nlp.seas.harvard.edu/SEAS.png" />
+  <meta name="og:image" href="/images/cornell_logo.pdf" />
 
-  <link rel="icon" type="image/png" href="/images/harvard.png" />
+  <link rel="icon" type="image/png" href="/images/cornell_logo.pdf" />
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
