--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
+    <!-- <h2 class="footer-heading">{{ site.title }}</h2> -->
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
@@ -11,7 +10,6 @@
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
       </div>
-
       <!-- <div class="footer-col footer-col-2">
         <ul class="social-media-list">
           {% if site.github_username %}
@@ -32,7 +30,7 @@
         <p>{{ site.description }}</p>
       </div>
     </div> -->
-
+    Design and source code from <a href="https://yuntiandeng.com">Yuntian Deng's</a> website
   </div>
-
+  
 </footer>
