--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,8 @@
         <p>{{ site.description }}</p>
       </div>
     </div> -->
-    Design and source code from <a href="https://yuntiandeng.com">Yuntian Deng's</a> website
+    <small>Design and source code from <a href="https://yuntiandeng.com">Yuntian Deng's</a> website</small>
+    
   </div>
   
 </footer>
