--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
         <p>{{ site.description }}</p>
       </div>
     </div> -->
-    <small>Design and source code from <a href="https://yuntiandeng.com">Yuntian Deng's</a> website</small>
+    <small>Design and source code from <a href="https://yuntiandeng.com">here</a></small>
     
   </div>
   
