--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,14 @@
 <head>
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LBN0MKRV0C"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-20WWQYCWZ3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
   
-    gtag('config', 'G-LBN0MKRV0C');
+    gtag('config', 'G-20WWQYCWZ3');
   </script>
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
